syntax = "proto3";

package com.hospital.patient;

option java_multiple_files = true;
option java_package = "com.hospital.patient.proto";
option java_outer_classname = "PatientProto";

// Modelo básico de paciente
message Patient {
  string id = 1;
  string name = 2;
  string last_name = 3;
  string identification = 4;
  string email = 5;
  string phone = 6;
  string address = 7;
  string birth_date = 8;
  string blood_type = 9;
}

// Solicitud para crear un paciente
message CreatePatientRequest {
  Patient patient = 1;
}

// Respuesta de creación de paciente
message CreatePatientResponse {
  Patient patient = 1;
  bool success = 2;
  string message = 3;
}

// Solicitud para obtener un paciente por ID
message GetPatientRequest {
  string id = 1;
}

// Respuesta con datos del paciente
message GetPatientResponse {
  Patient patient = 1;
  bool success = 2;
  string message = 3;
}

// Solicitud para actualizar un paciente
message UpdatePatientRequest {
  Patient patient = 1;
}

// Respuesta de actualización de paciente
message UpdatePatientResponse {
  Patient patient = 1;
  bool success = 2;
  string message = 3;
}

// Solicitud para eliminar un paciente
message DeletePatientRequest {
  string id = 1;
}

// Respuesta de eliminación de paciente
message DeletePatientResponse {
  bool success = 1;
  string message = 2;
}

// Solicitud para listar pacientes
message ListPatientsRequest {
  int32 page = 1;
  int32 size = 2;
}

// Respuesta con lista de pacientes
message ListPatientsResponse {
  repeated Patient patients = 1;
  int32 total_pages = 2;
  int32 current_page = 3;
  int32 total_elements = 4;
  bool success = 5;
  string message = 6;
}

// Definición del servicio gRPC (opcional pero recomendado)
service PatientService {
  rpc CreatePatient(CreatePatientRequest) returns (CreatePatientResponse);
  rpc GetPatient(GetPatientRequest) returns (GetPatientResponse);
  rpc UpdatePatient(UpdatePatientRequest) returns (UpdatePatientResponse);
  rpc DeletePatient(DeletePatientRequest) returns (DeletePatientResponse);
  rpc ListPatients(ListPatientsRequest) returns (ListPatientsResponse);
}